Made jumbotron txt fixed then stuck as page scrolls

--- a/css/style.css
+++ b/css/style.css
@@ -22,13 +22,14 @@ h1, h2 {
   box-shadow: 0 0 0 30px  #505050,
     0 30px 0 10px #2061cc;
   margin-bottom: 1in;
+  position: relative;
 }
 .jumbotron .img_container img {
   width: 100%;
   display: block;
 }
 
-.jumbotron #jumbo_txt_container {
+#jumbo_txt_container {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -37,7 +38,13 @@ h1, h2 {
   border: 4px solid #2061cc;
   padding: 25px;
 }
-.jumbotron #jumbo_txt_container h1 {
+
+#jumbo_txt_container.scrolled_down {
+  position: absolute;
+  transform: translate(-50%,0%);
+}
+
+#jumbo_txt_container h1 {
   text-align: center;
   color: #f0f0f0;
 }
